# libconstants

./: meson.build  meson_options.txt  readme.md
assets/static/const/: meson.build
src/: meson.build
src/constants/: meson.build
src/constants/lib/: const.cpp
src/constants/private/: const.cpp
src/constants/public/: const.h
tests/: meson.build
tests/constants/: constTest.cpp  meson.build
